# mfe-toolbox-python-gsl2m0

./: .gitignore  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md
infrastructure/config/: bandit.yml  black.toml  coverage.ini  flake8.ini  isort.cfg  mypy.ini  pytest.ini  sphinx.conf
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/scripts/: build.sh  clean.sh  format.sh  lint.sh  setup_dev.sh  setup_prod.sh  setup_test.sh  test.sh
infrastructure/templates/: ACKNOWLEDGMENTS.md  API.md  APPENDIX.md  ARCHITECTURE.md  AUTHORS.md  BEST_PRACTICES.md  BIBLIOGRAPHY.md  CHANGELOG.md  CITATION.md  CLI.md  CODE_OF_CONDUCT.md  CONCLUSION.md  CONFIGURATION.md  CONTRIBUTING.md  CREDITS.md  DEPENDENCIES.md  DEPLOYMENT.md  DEPRECATION.md  EXAMPLES.md  FAQ.md  GLOSSARY.md  GUI.md  INDEX.md  TOC.md  (+21 more)
src/backend/: README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt  setup.py
src/backend/core/: __init__.py  bootstrap.py  distributions.py  optimization.py  tests.py
src/backend/models/: __init__.py  armax.py  garch.py  realized.py  timeseries.py  univariate.py  volatility.py
src/backend/tests/: __init__.py  test_bootstrap.py  test_distributions.py  test_garch.py  test_optimization.py  test_realized.py  test_timeseries.py  test_univariate.py  test_volatility.py
src/backend/ui/: armax_viewer.py  residual_plot.py  widgets.py
src/backend/utils/: __init__.py  printing.py  validation.py
(+43 files in other folders)
