[build-system]
requires = ["setuptools>=69.0.2", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mfe"
version = "4.0.0"
description = "MATLAB Financial Econometrics Toolbox re-implemented in Python"
authors = [
    {name = "Kevin Sheppard"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "pandas>=2.1.4",
    "statsmodels>=0.14.1",
    "numba>=0.59.0",
    "pyqt6>=6.6.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-memray>=1.5.0",
    "hypothesis>=6.92.1",
    "sphinx>=7.1.2",
    "mypy>=1.7.1"
]

[project.urls]
Homepage = "https://github.com/bashtage/arch"
Documentation = "https://bashtage.github.io/arch/"
Source = "https://github.com/bashtage/arch"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v --cov=mfe --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true